0. README and objectives!

--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -1,283 +1,242 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+/* ************************************ */
+
+/* @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap'); */
+
+
+:root {
+    --primary-font-color: #FFFFFF;
+    --purple-color: #C271FF;
+}
+
+
 * {
-  margin: 0;
-  padding: 0;
-  font-family: "Source Sans 3", sans-serif;
-  color: #fff;
-  zoom: 99%;
-}
-.landing-wrapper {
-  background-image: url("./assets/background.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-nav {
-  font-size: 12px;
-  text-transform: uppercase;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 34px 120px;
+    font-family: 'Source Sans Pro', sans-serif, monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: 12px;
+    text-decoration: none;
+    color: #FFFFFF;
+    padding: 0;
+    margin: 0;
 }
 
-nav ul {
-  list-style: none;
-  display: flex;
 
-  gap: 53px;
-  font-weight: 500;
-  cursor: pointer;
-}
-.header,
-.pros {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.section1 h1 {
-  font-size: 120px;
-  margin-bottom: -7px;
-  margin-top: 120px;
-}
-.spans {
-  display: flex;
-  gap: 70px;
-  font-weight: 500;
-  flex-direction: row;
-  font-size: 16px;
-  text-transform: uppercase;
-  margin: 0;
-}
-button {
-  background-color: #c271ff;
-  border-style: none;
-  text-transform: uppercase;
-  padding: 13px 20px;
-  border-radius: 22px;
-  font-size: 14px;
-  margin: 45px;
-  cursor: pointer;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15); /* Drop shadow: vertical offset, blur, and slight opacity */
-  transition: box-shadow 0.3s ease, transform 0.3s ease; /* Smooth transition */
-}
-button:hover {
-  background-color: grey;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Enhanced drop shadow on hover */
-  transform: translateY(-2px); /* Lift effect */
-}
+
+/* Any headline in the project is H2*/
 h2 {
-  font-size: 32px;
-  font-weight: 100;
-  margin: 70px 0;
-}
-.pros h2 {
-  margin-top: 120px;
-}
-.purple {
-  font-weight: 600;
-  color: #c271ff;
-}
-.avatar-pros {
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-  gap: 160px;
-  margin: 65px;
+    font-size: 34px;
+    text-align: center;
 }
 
-.av {
-  width: 150px;
-  height: 237px;
+
+/* Nav Bar */
+
+nav{
+    padding: 34px 120px 0 34px;
+    text-align: center;
 }
-.av h3 {
-  font-size: 18px;
+
+.nav-bar {
+    margin-left: auto;
+    margin-right: 100px;
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    text-decoration: none;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
-.av p {
-  font-style: italic;
-  font-size: 16px;
-  margin: 5px 0;
+
+nav ul, nav {
+    display: flex;
+    flex-direction: row;
 }
+
+h3 {
+    font-size: 18px;
+    line-height: 27px;
+}
+
+.landing-wrapper {
+    background-image: url(images/Object.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.intro {
+    /* border: 1px solid yellow; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+h1 {
+    font-size: 120px;
+    justify-self: center;
+    align-self: center;
+    margin-top: 200px;
+    text-align: center; 
+    font-weight: bold;
+}
+
+.spans {
+    display: flex;
+    flex-direction: row;
+    gap: 90px;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+
+li a {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.round-image {
+    border-radius: 50%;
+}
+
+
+
+.pros {
+    display: flex;
+    flex-direction: column;
+    /* border: 1px solid blue; */
+    justify-content: center;
+    padding-top: 300px;
+    gap: 30px;
+}
+
+.pro-tickets {
+    display: flex;
+    flex-direction: row;
+    gap: 140px;
+    justify-content: center;
+    text-align: center;
+}
+
+.pro-ticket {
+ /* border: 1px solid yellow; */
+ width: 150px;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ line-height: 25px;
+ font-size: 16px;
+}
+
+.pro-ticket h3 {
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.pro-ticket image {
+    width: ;
+}
+
+
+button {
+    border: 0px;
+    background-color: var(--purple-color);
+    height: 44px;
+    width: 162px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+}
+
+.section1 button {
+    margin-top: 150px;
+}
+
+button:hover {
+    background-color: grey;
+}
+
+
+.qoutes {
+    font-size: 22px;
+    border: 1px solid green;
+    
+}
+
 .section2 {
-  background-color: #c271ff;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 55px;
-  padding: 90px 200px;
+    background-color: var(--purple-color);
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    height: 392px;
+    align-items: center;
+    
+    /* display: none; */
 }
-.section2 img {
-  width: 160px;
-  height: 160px;
+.section3 {
+    background-color: rgb(215, 215, 253);
+    /* display: none; */
 }
-
-.section2 blockquote,
-.section2 h3,
-.section2 p {
-  font-size: 22px;
-}
-.section2 blockquote,
-.section2 p {
-  font-weight: 300;
-}
-.text {
-  width: 730px;
-}
-.section3 h2,
-.section5 h2 {
-  color: black;
-  text-align: center;
-}
-.all-cards {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-  justify-content: center;
-  align-items: center;
-  margin: 50px 100px;
-}
-.card h3,
-.card p,
-.card h4 {
-  color: black;
-}
-.card {
-  width: 255px;
-}
-
-.card-avatar {
-  width: 30px;
-  height: 30px;
-}
-
-.card {
-  padding: 10px;
-}
-.card img {
-  width: 100%;
-  height: auto;
-  position: relative;
-  cursor: pointer;
-}
-
-.card h3 {
-  color: #333;
-  font-size: 18px;
-  margin: 10px 0;
-}
-
-.card p {
-  color: #666;
-  font-size: 14px;
-  margin: 20px 0;
-}
-
-.card .card-avatar {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  vertical-align: middle;
-  margin-right: 10px;
-  padding: 10px 0;
-}
-
-.card h4 {
-  display: inline;
-  color: #a100ff;
-  font-size: 14px;
-  vertical-align: middle;
-}
-.div-time {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 15px;
-  align-items: center;
-}
-
-.card .fa-star {
-  color: #a100ff;
-  font-size: 16px;
-}
-.stars {
-  display: flex;
-  gap: 7px;
-}
-
-.card p:last-child {
-  color: #666;
-  font-size: 12px;
-  margin-top: 10px;
-}
-.time {
-  color: #a100ff;
-  font-weight: 500;
-  font-size: 14px;
-}
-
 .section4 {
-  background-color: #071629;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.section4 .all-cards div {
-  width: 257px;
-  text-align: center;
-  margin-bottom: 40px;
-}
-
-.section5 h2 {
-  font-size: 60px;
-  margin: 50px 0 30px 0;
-}
-
-.section5 div,
-.section5 h3 {
-  color: black;
+    background-color: rgb(89, 89, 245);
+    /* display: none; */
 }
 .section5 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.main {
-  display: flex;
-  flex-direction: row;
-  gap: 200px;
-}
-.main div {
-  width: 350px;
-}
-.main {
-  margin: 55px;
-}
-.sub div {
-  margin: 20px 0 50px 0;
-  color: #666;
-}
-footer section {
-  background-color: #071629;
-  height: 249px;
-}
-
-.footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 105px 90px 70px 90px;
-}
-.social-media {
-  display: flex;
-  gap: 30px;
-  font-size: 20px;
-  cursor: pointer;
-}
-footer section p {
-  text-align: center;
-  font-size: 12px;
-  color: #666;
+    background-color: rgb(215, 215, 253);
+    /* display: none; */
 }
