--- a/headphones/styles.css
+++ b/headphones/styles.css
@@ -72,11 +72,9 @@
   }
 
 * {
-    color: white;
     font-family: "Source Sans Pro", sans-serif;
     overflow-wrap: break-word;
     word-break: break-word;
-    
 }
 
 body, body::after {
@@ -94,22 +92,22 @@ a {
     text-decoration: none;
 }
 
-button {
+.red-button {
     background-color: var(--primary-color);
     border-radius: 25px;
     height: 44px;
     width: 162px;
     border: none;
-    /* padding: 5px; */
+    color: white;
 }
 
-button:hover {
+.red-button:hover {
     opacity: var(--button-hover-active-opacity);
 }
 
 h1 {
     font-size: 32px;
-    border: 1px solid;
+    /* border: 1px solid; */
     font-weight: 500;
 }
 
@@ -158,13 +156,17 @@ section {
   justify-content: center;
   align-items: center;
   align-self: center;
-  border: 1px solid green;
+  /* border: 1px solid green; */
 }
 
 .intro p {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   text-align: center;
   max-width: 640px;
+}
+
+.white-color {
+  color: white;
 }
 
 /* header-nav Section Together  */
@@ -192,7 +194,7 @@ header {
     flex-direction: row;
     align-items: center;
     padding: 25px 5% 0 5%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 header ul {
@@ -221,7 +223,7 @@ nav{
     justify-content: center;
     text-align: center;
     align-items: center;
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     margin-top: 220px;
     margin-bottom: 35px;
     /* padding-bottom: 0; */
@@ -239,7 +241,7 @@ nav{
 @media (max-width: 480px) {
   /* deelte this line below */
   *::after, * {
-    color: yellow;
+    /* color: yellow; */
   }
 
   .show-on-mobile {
@@ -250,7 +252,7 @@ nav{
     margin: 20px auto 0 auto;
     width: 60%;
     height: auto;
-    border: 1px dashed green;
+    /* border: 1px dashed green; */
     position: relative;
     top: 50%;
     transform: translateY(-50%);
@@ -263,7 +265,7 @@ nav{
 
   /* Menu Icon */
   .menu-icon{
-    border: 1px solid white;
+    /* border: 1px solid white; */
     width: 30px; 
     height: 25px; 
     display: flex;
@@ -314,7 +316,7 @@ nav{
 
 .what-we-do-container {
   /* width: 210px; */
-  border: 1px dashed green;
+  /* border: 1px dashed green; */
   gap: 60px;
   justify-content: center;
   flex-wrap: wrap;
@@ -325,7 +327,7 @@ nav{
 }
 
 .ticket {
-  border: 1px solid rgb(214, 20, 20);
+  /* border: 1px solid rgb(214, 20, 20); */
   width: 210px;
 }
 
@@ -344,6 +346,7 @@ nav{
   text-align: center;
   align-items: center;
   gap: 40px;
+  
 }
 
 .section-3 *{
@@ -352,6 +355,8 @@ nav{
 
 .pentagone-container {
   gap: 75px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 
@@ -361,4 +366,49 @@ nav{
   background-position: center; 
   background-repeat: no-repeat;
   margin-top: 20px;
+  height: 180px;
+  justify-content: center;
+}
+
+/* Section 4 */
+.section-4 {
+  padding-left: 0;
+  padding-right: 0;
+  width: 335px;
+}
+
+.section-4 *{
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+#submit {
+  width: 162px;
+}
+
+.form {
+  gap: 40px;
+}
+
+input {
+  border: none;
+  border-top: 1px solid #071629;
+}
+
+textarea {
+  border: none;
+  border-top: 1px solid #071629;
+}
+
+
+/* Footer  */
+footer {
+  background-color: #071629;
+  padding: 90px;
+}
+
+footer p {
+  opacity: 35.17%;
+  color: white;
 }
